day 15 h2 spacing correct

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@ h2{
     font-size: 40px !important;
     font-weight: bold !important;     
 }
+@media screen and (max-width: 600px) {
+    h2 {
+        padding-top: 12%;
+    }
+  }
 /*paragraph styling*/
 p{
     text-align: center;
